# kmpc

./: CHANGELOG  CMakeLists.txt  README.md  UNLICENSE  vcpkg.json
config/: kmpc.desktop  kmpc.rc  uninstall.cmake.in
src/: CMakeLists.txt  README.md  main.cpp  main.hpp  mainwindow.ui
